tests/expected_output/index_string/000000-clang-13.0-x86_64-pc-linux-gnu.txt
tests/extracted_compile_time_errors/index_string.c:3:13: error: array subscript is not an integer
    return a["0"];
            ^~~~
dcc explanation: you are using a string as an array index. An array index has to be an integer.
